# SUBE-transit-analytics

./: .gitignore  README.md  config.py  design.md  main.py  pyproject.toml  run_pipeline.py
.github/workflows/: update_data.yaml
analytics/: causal.py  diagnostics.py  ml.py  time_series.py
dashboard/: app.py  strings.py  utils.py
dashboard/tabs/: anomalies.py  covid.py  forecast.py  its.py  modal.py  overview.py  resilience.py  shared.py
data/reference/: events.yaml  fare_hikes.yaml  holidays.yaml
etl/: clean.py  ingest.py  ingest_historical.py  load.py
tests/: conftest.py  test_causal.py  test_clean.py  test_config.py  test_dashboard.py  test_ingest.py  test_load.py  test_ml.py  test_time_series.py
